Make RunExportCommandIT place all files in temporaryFolder
The RunExportCommandIT test was littering outside of its `target/` folder.
This change puts the `benchmark_stores` directory in the test directory
where it belongs.